--- a/assets/css/sponsors.css
+++ b/assets/css/sponsors.css
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+.sectionSponsor h2 {
+  margin-top: 3rem;
+}
+
 .itemSpons {
   display: flex;
   flex-wrap: wrap;
